# ere

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/scripts/: fetch-zkvm-version.sh  free-up-disk-space.sh  pull-or-build-base-zkvm-image.sh
.github/workflows/: check-fmt.yml  check-zkvm-version.yml  check_base_image.yml  check_jolt_image.yml  (+23 more)
crates/dockerized/compiler/: Cargo.toml
crates/dockerized/compiler/src/: main.rs
crates/dockerized/dockerized/: Cargo.toml  build.rs
crates/dockerized/dockerized/src/: docker.rs  error.rs  input.rs  lib.rs  output.rs
crates/dockerized/server/: Cargo.toml
crates/dockerized/server/proto/: api.proto
crates/dockerized/server/src/: client.rs  input.rs  lib.rs  main.rs  server.rs
crates/ere-cli/: Cargo.toml
crates/ere-cli/src/: lib.rs  main.rs  serde.rs
crates/ere-dockerized/: Cargo.toml  build.rs
crates/ere-dockerized/src/: cuda.rs  docker.rs  error.rs  input.rs  lib.rs  output.rs
crates/ere-jolt/: Cargo.toml  build.rs
crates/ere-jolt/src/: compile_stock_rust.rs  compiler.rs  error.rs  jolt_methods.rs  lib.rs  template.ld  utils.rs
crates/ere-jolt/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/ere-miden/: Cargo.toml  build.rs
crates/ere-miden/src/: compile.rs  compiler.rs  error.rs  io.rs  lib.rs
crates/ere-miden/src/compiler/: miden_asm.rs
crates/ere-nexus/: Cargo.toml  build.rs
crates/ere-nexus/src/: error.rs  lib.rs  utils.rs
crates/ere-nexus/src/compiler/: rust_rv32i.rs
crates/ere-openvm/: Cargo.toml  build.rs
crates/ere-openvm/src/: compile_stock_rust.rs  error.rs  lib.rs
crates/ere-openvm/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/ere-pico/: Cargo.toml  build.rs
crates/ere-pico/src/: client.rs  compile_stock_rust.rs  error.rs  lib.rs
crates/ere-pico/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/ere-risc0/: Cargo.toml  compose.yml  gpu_prover_agent.yml  sample.env
crates/ere-risc0/src/: compile.rs  compile_stock_rust.rs  compiler.rs  error.rs  lib.rs  output.rs  prove.rs
crates/ere-risc0/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/ere-risc0/src/prove/: bento.rs  default.rs
crates/ere-risczero/: Cargo.toml  build.rs  build_script_template.rs
crates/ere-risczero/src/: compile.rs  error.rs  lib.rs
crates/ere-risczero/src/compile/: file_utils.rs
crates/ere-server/: Cargo.toml  build.rs
crates/ere-server/proto/: api.proto
crates/ere-server/src/: api.rs  client.rs  input.rs  lib.rs  main.rs  server.rs
crates/ere-sp1/: Cargo.toml  build.rs
crates/ere-sp1/src/: compile.rs  compile_stock_rust.rs  error.rs  lib.rs
crates/ere-sp1/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/ere-ziren/: Cargo.toml  build.rs
crates/ere-ziren/src/: compiler.rs  error.rs  lib.rs
crates/ere-ziren/src/compiler/: rust_mips32r2_customized.rs
crates/ere-zisk/: Cargo.toml  build.rs
crates/ere-zisk/src/: client.rs  compile.rs  error.rs  lib.rs
crates/ere-zisk/src/compiler/: rust_rv64ima_customized.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: guest.rs  host.rs  lib.rs  program.rs
crates/test-utils/src/program/: basic.rs
crates/zkvm-interface/: Cargo.toml
crates/zkvm-interface/src/: compiler.rs  error.rs  input.rs  lib.rs  network.rs  reports.rs  zkvm.rs
crates/zkvm-interface/src/zkvm/: error.rs  proof.rs  report.rs  resource.rs
crates/zkvm/airbender/: Cargo.toml  build.rs
crates/zkvm/airbender/src/: client.rs  compiler.rs  error.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/airbender/src/compiler/: rust_rv32ima.rs
crates/zkvm/airbender/src/compiler/rust_rv32ima/: link.x  memory.x
crates/zkvm/airbender/src/zkvm/: error.rs  sdk.rs
crates/zkvm/jolt/: Cargo.toml  build.rs
crates/zkvm/jolt/src/: client.rs  compiler.rs  error.rs  jolt_methods.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/jolt/src/compiler/: error.rs  rust_rv32ima.rs  rust_rv32ima_customized.rs  rust_rv64imac.rs  rust_rv64imac_customized.rs
crates/zkvm/jolt/src/compiler/rust_rv64imac/: template.ld
crates/zkvm/jolt/src/zkvm/: error.rs  sdk.rs
crates/zkvm/miden/: Cargo.toml  build.rs
crates/zkvm/miden/src/: compiler.rs  error.rs  io.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/miden/src/compiler/: error.rs  miden_asm.rs
crates/zkvm/miden/src/zkvm/: error.rs
crates/zkvm/nexus/: Cargo.toml  build.rs
crates/zkvm/nexus/src/: compiler.rs  error.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/nexus/src/compiler/: rust_rv32i.rs
crates/zkvm/nexus/src/zkvm/: error.rs
crates/zkvm/openvm/: Cargo.toml  build.rs
crates/zkvm/openvm/src/: compiler.rs  error.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/openvm/src/compiler/: error.rs  rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/zkvm/openvm/src/zkvm/: error.rs
crates/zkvm/pico/: Cargo.toml  build.rs
crates/zkvm/pico/src/: client.rs  compiler.rs  error.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/pico/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/zkvm/pico/src/zkvm/: error.rs  sdk.rs
crates/zkvm/risc0/: Cargo.toml  build.rs
crates/zkvm/risc0/src/: error.rs  lib.rs  output.rs  program.rs  zkvm.rs
crates/zkvm/risc0/src/compiler/: error.rs  rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/zkvm/risc0/src/zkvm/: error.rs
crates/zkvm/sp1/: Cargo.toml  build.rs
crates/zkvm/sp1/src/: compiler.rs  error.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/sp1/src/compiler/: rust_rv32ima.rs  rust_rv32ima_customized.rs
crates/zkvm/sp1/src/zkvm/: error.rs  sdk.rs
crates/zkvm/ziren/: Cargo.toml  build.rs
crates/zkvm/ziren/src/: compiler.rs  error.rs  lib.rs  program.rs  zkvm.rs
crates/zkvm/ziren/src/compiler/: rust_mips32r2_customized.rs
crates/zkvm/ziren/src/zkvm/: error.rs
docker/risc0/: Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.compiler  Dockerfile.server
docker/risc0/src/: main.rs
docker/sp1/: Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.compiler  Dockerfile.server
docker/sp1/src/: main.rs
scripts/: install_cuda.sh  install_docker.sh  utils.sh
(+127 files in other folders)
