[workspace]
members = [
    # zkVM interface
    "crates/zkvm-interface",
    # zkVMs
    "crates/zkvm/jolt",
    "crates/zkvm/miden",
    "crates/zkvm/nexus",
    "crates/zkvm/openvm",
    "crates/zkvm/pico",
    "crates/zkvm/risc0",
    "crates/zkvm/sp1",
    "crates/zkvm/ziren",
    "crates/zkvm/zisk",
    # Dockerized zkVM
    "crates/dockerized/compiler",
    "crates/dockerized/dockerized",
    "crates/dockerized/server",
    # Utils
    "crates/build-utils",
    "crates/compile-utils",
    "crates/test-utils",
]
resolver = "2"

[workspace.package]
version = "0.0.13"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints]

[workspace.dependencies]
anyhow = "1.0.98"
auto_impl = "1.3.0"
bincode = "1.3.3"
blake3 = "1.8.2"
borsh = "1.5.7"
bytemuck = "1.23.1"
cargo_metadata = "0.19.0"
clap = "4.5.42"
dashmap = "6.1.0"
erased-serde = "0.4.6"
indexmap = "2.10.0"
prost = "0.13"
prost-build = "0.13"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
strum = "0.27.2"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.0"
toml = "0.8.23"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twirp = "0.9.1"
twirp-build = "0.9.0"

# Jolt dependencies
ark-serialize = "0.5.0"
common = { git = "https://github.com/a16z/jolt.git", rev = "55b9830a3944dde55d33a55c42522b81dd49f87a" }
jolt = { git = "https://github.com/a16z/jolt.git", rev = "55b9830a3944dde55d33a55c42522b81dd49f87a" }

# Miden dependencies
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.17.1" }
miden-core = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.17.1" }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.17.1" }
miden-prover = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.17.1" }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.17.1" }
miden-verifier = { git = "https://github.com/0xPolygonMiden/miden-vm.git", tag = "v0.17.1" }

# Nexus dependencies
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "v0.3.4" }

# OpenVM dependencies
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }
openvm-continuations = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.0" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }

# Pico dependencies
pico-p3-field = { git = "https://github.com/brevis-network/Plonky3.git", package = "p3-field", rev = "a4d376b" }
pico-vm = { git = "https://github.com/brevis-network/pico.git", tag = "v1.1.7" }

# Risc0 dependencies
risc0-build = "3.0.3"
risc0-zkvm = { version = "3.0.3", default-features = false }
risc0-binfmt = { version = "3.0.2", default-features = false }

# SP1 dependencies
sp1-sdk = "5.2.1"

# Ziren dependencies
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren.git", tag = "v1.1.4" }

# Local dependencies
ere-zkvm-interface = { path = "crates/zkvm-interface" }

ere-jolt = { path = "crates/zkvm/jolt", default-features = false }
ere-miden = { path = "crates/zkvm/miden", default-features = false }
ere-nexus = { path = "crates/zkvm/nexus", default-features = false }
ere-openvm = { path = "crates/zkvm/openvm", default-features = false }
ere-pico = { path = "crates/zkvm/pico", default-features = false }
ere-risc0 = { path = "crates/zkvm/risc0", default-features = false }
ere-sp1 = { path = "crates/zkvm/sp1", default-features = false }
ere-ziren = { path = "crates/zkvm/ziren", default-features = false }
ere-zisk = { path = "crates/zkvm/zisk", default-features = false }

ere-compiler = { path = "crates/dockerized/compiler" }
ere-dockerized = { path = "crates/dockerized/dockerized" }
ere-server = { path = "crates/dockerized/server" }

ere-build-utils = { path = "crates/build-utils" }
ere-compile-utils = { path = "crates/compile-utils" }
ere-test-utils = { path = "crates/test-utils" }

[patch.crates-io]
# These patches are only needed by Jolt
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
