[package]
name = "ere-dockerized"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode = "1.3"
cargo_metadata = "0.19"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3"
thiserror = "2"

zkvm-interface = { workspace = true, features = ["clap"] }

# Needed for Risc0 and OpenVM input serialization.
bytemuck = "1.13"
risc0-zkvm = { version = "^2.3.0", default-features = false }

[dev-dependencies]

[build-dependencies]
build-utils = { workspace = true }

[lints]
workspace = true
