[package]
name = "ere-dockerized"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true

# Needed for Risc0 and OpenVM input serialization.
bytemuck.workspace = true
risc0-zkvm.workspace = true

# Local dependencies
zkvm-interface = { workspace = true, features = ["clap"] }
ere-cli.workspace = true

[dev-dependencies]

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
