[package]
name = "ere-dockerized"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true

# Needed for Risc0 and OpenVM input serialization.
bytemuck.workspace = true
risc0-zkvm.workspace = true

# Local dependencies
zkvm-interface = { workspace = true, features = ["clap"] }
ere-server.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
