[package]
edition.workspace = true
license.workspace = true
name = "ere-jolt"
rust-version.workspace = true
version.workspace = true

[dependencies]
ark-serialize = { version = "0.5.0", features = ["derive"] }
common = { git = "https://github.com/a16z/jolt", tag = "v0.1.0-alpha" }
jolt = { git = "https://github.com/a16z/jolt", tag = "v0.1.0-alpha", features = ["host"] }
jolt-core = { git = "https://github.com/a16z/jolt", tag = "v0.1.0-alpha", features = ["host"] }
jolt-sdk = { git = "https://github.com/a16z/jolt", tag = "v0.1.0-alpha", features = ["host"] }
tempfile = "3.3"
thiserror = "2"
toml = "0.8"
zkvm-interface = { workspace = true }

[build-dependencies]
build-utils = { workspace = true }

[lints]
workspace = true
