[package]
name = "ere-jolt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

# Jolt dependencies
ark-serialize = { workspace = true, features = ["derive"] }
common.workspace = true
jolt = { workspace = true, features = ["host"] }
jolt-core = { workspace = true, features = ["host"] }
jolt-sdk = { workspace = true, features = ["host"] }

# Local dependencies
zkvm-interface.workspace = true

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
