[package]
name = "ere-jolt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true

# Jolt dependencies
ark-serialize = { workspace = true, features = ["derive"] }
common.workspace = true
jolt = { workspace = true, features = ["host"] }

# Local dependencies
compile-utils.workspace = true
zkvm-interface.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
