[package]
name = "ere-miden"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
zkvm-interface = { workspace = true }

# Miden
miden-assembly = { workspace = true, features = ["std"] }
miden-core = { workspace = true, features = ["std"] }
miden-processor = { workspace = true, features = ["std"] }
miden-prover = { workspace = true, features = ["std"] }
miden-stdlib = { workspace = true, features = ["std"] }
miden-verifier = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
