[package]
name = "ere-nexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

# Nexus dependencies
nexus-sdk.workspace = true

# Local dependencies
zkvm-interface.workspace = true

[dev-dependencies]
anyhow.workspace = true

[build-dependencies]
build-utils.workspace = true


[lints]
workspace = true
