[package]
name = "ere-nexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Nexus dependencies
nexus-sdk.workspace = true

# Local dependencies
compile-utils.workspace = true
zkvm-interface.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true


[lints]
workspace = true
