[package]
name = "ere-openvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
cargo_metadata.workspace = true
tracing.workspace = true
toml.workspace = true

# OpenVM dependencies
openvm-build.workspace = true
openvm-circuit.workspace = true
openvm-continuations.workspace = true
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true

# Local dependencies
zkvm-interface.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
