[package]
name = "ere-pico"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
thiserror.workspace = true

# Pico dependencies
pico-vm.workspace = true
pico-sdk.workspace = true

# Local dependencies
zkvm-interface.workspace = true

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
