[package]
name = "ere-pico"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
sha2.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true

# Pico dependencies
pico-p3-field.workspace = true
pico-vm.workspace = true

# Local dependencies
compile-utils.workspace = true
zkvm-interface.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
