[package]
name = "ere-risc0"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
cargo_metadata.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
thiserror.workspace = true
tracing.workspace = true

# Risc0 dependencies
risc0-build = { workspace = true, default-features = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, default-features = true, features = ["unstable"] }

# Local dependencies
zkvm-interface.workspace = true

[build-dependencies]
build-utils.workspace = true

[features]
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]

[lints]
workspace = true
