[package]
name = "ere-risczero"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }
anyhow = "1.0"                        #TODO: remove only needed in tests
toml = "0.8"

tempfile = "3.3"
serde_json = "1.0"
thiserror = "2"

[lints]
workspace = true
