[package]
name = "ere-risczero"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }
anyhow = "1.0"                                               #TODO: remove only needed in tests
toml = "0.8"
risc0-zkvm = { version = "^2.1.0", features = ["unstable"] }
borsh = "1.5.7"
hex = "*"

tempfile = "3.3"
serde_json = "1.0"
thiserror = "2"

[features]
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]

[lints]
workspace = true
