[package]
name = "ere-sp1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

# SP1 dependencies
sp1-sdk.workspace = true

# Local dependencies
zkvm-interface.workspace = true

[build-dependencies]
build-utils.workspace = true
