[package]
edition.workspace = true
license.workspace = true
name = "ere-sp1"
rust-version.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

# SP1 dependencies
sp1-sdk.workspace = true

# Local dependencies
zkvm-interface.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true
