[package]
name = "ere-sp1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true

# SP1 dependencies
sp1-sdk.workspace = true

# Local dependencies
compile-utils.workspace = true
zkvm-interface.workspace = true

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true
