[package]
name = "ere-ziren"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Ziren dependencies
zkm-sdk = { workspace = true }

# Local dependencies
zkvm-interface = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true

[lints]
workspace = true
