[package]
name = "ere-zisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zkvm-interface = { workspace = true }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.3.1"

[build-dependencies]
build-utils = { workspace = true }

[lib]
name = "ere_zisk"
path = "src/lib.rs"
