[package]
name = "ere-zisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
blake3.workspace = true
dashmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

# Local dependencies
zkvm-interface.workspace = true

[dev-dependencies]
# Local dependencies
test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
build-utils.workspace = true
