[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

# Local dependencies
zkvm-interface = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = []
host = ["dep:rand", "dep:zkvm-interface"]
