[package]
name = "ere-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true

# Local dependencies
ere-zkvm-interface = { workspace = true, optional = true }
ere-io-serde = { workspace = true }

[lints]
workspace = true

[features]
default = []
host = ["dep:rand", "dep:ere-zkvm-interface"]
