[package]
name = "zkvm-interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
indexmap = { version = "2.9.0", features = ["serde"] }
thiserror = "2"
auto_impl = "1.0"
erased-serde = "0.4.6"
humantime-serde = "1.1"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
