[package]
name = "zkvm-interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
auto_impl.workspace = true
erased-serde.workspace = true
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# Optional dependencies
clap = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[features]
default = []
clap = ["dep:clap"]
