[package]
name = "ere-zkvm-interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
auto_impl.workspace = true
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# Optional dependencies
clap = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
bincode = { workspace = true, features = ["alloc", "serde"] }
serde_json.workspace = true

[lints]
workspace = true

[features]
default = []
clap = ["dep:clap"]
