[package]
name = "ere-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["std", "serde"] }
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local dependencies
ere-jolt = { workspace = true, optional = true }
ere-miden = { workspace = true, optional = true }
ere-nexus = { workspace = true, optional = true }
ere-openvm = { workspace = true, optional = true }
ere-pico = { workspace = true, optional = true }
ere-risc0 = { workspace = true, optional = true }
ere-sp1 = { workspace = true, optional = true }
ere-ziren = { workspace = true, optional = true }
ere-zisk = { workspace = true, optional = true }
ere-zkvm-interface.workspace = true

[dev-dependencies]

[features]
default = []

# zkVM
jolt = ["dep:ere-jolt"]
miden = ["dep:ere-miden"]
nexus = ["dep:ere-nexus"]
openvm = ["dep:ere-openvm"]
pico = ["dep:ere-pico"]
risc0 = ["dep:ere-risc0"]
sp1 = ["dep:ere-sp1"]
ziren = ["dep:ere-ziren"]
zisk = ["dep:ere-zisk"]

[lints]
workspace = true
