[package]
name = "ere-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["std", "serde"] }
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Local dependencies
ere-airbender = { workspace = true, features = ["compiler"], optional = true }
ere-jolt = { workspace = true, features = ["compiler"], optional = true }
ere-miden = { workspace = true, features = ["compiler"], optional = true }
ere-nexus = { workspace = true, features = ["compiler"], optional = true }
ere-openvm = { workspace = true, features = ["compiler"], optional = true }
ere-pico = { workspace = true, features = ["compiler"], optional = true }
ere-risc0 = { workspace = true, features = ["compiler"], optional = true }
ere-sp1 = { workspace = true, features = ["compiler"], optional = true }
ere-ziren = { workspace = true, features = ["compiler"], optional = true }
ere-zisk = { workspace = true, features = ["compiler"], optional = true }
ere-zkvm-interface.workspace = true

[dev-dependencies]

[features]
default = []

# zkVM
airbender = ["dep:ere-airbender"]
jolt = ["dep:ere-jolt"]
miden = ["dep:ere-miden"]
nexus = ["dep:ere-nexus"]
openvm = ["dep:ere-openvm"]
pico = ["dep:ere-pico"]
risc0 = ["dep:ere-risc0"]
sp1 = ["dep:ere-sp1"]
ziren = ["dep:ere-ziren"]
zisk = ["dep:ere-zisk"]

[lints]
workspace = true
